server/src/parser/ponyParser.ts
// Generated from src/parser/pony.g4 by ANTLR 4.6-SNAPSHOT


import { ATN } from 'antlr4ts/atn/ATN';
import { ATNDeserializer } from 'antlr4ts/atn/ATNDeserializer';
import { FailedPredicateException } from 'antlr4ts/FailedPredicateException';
import { NotNull } from 'antlr4ts/Decorators';
import { NoViableAltException } from 'antlr4ts/NoViableAltException';
import { Override } from 'antlr4ts/Decorators';
import { Parser } from 'antlr4ts/Parser';
import { ParserRuleContext } from 'antlr4ts/ParserRuleContext';
import { ParserATNSimulator } from 'antlr4ts/atn/ParserATNSimulator';
import { ParseTreeListener } from 'antlr4ts/tree/ParseTreeListener';
import { ParseTreeVisitor } from 'antlr4ts/tree/ParseTreeVisitor';
import { RecognitionException } from 'antlr4ts/RecognitionException';
import { RuleContext } from 'antlr4ts/RuleContext';
import { RuleVersion } from 'antlr4ts/RuleVersion';
import { TerminalNode } from 'antlr4ts/tree/TerminalNode';
import { Token } from 'antlr4ts/Token';
import { TokenStream } from 'antlr4ts/TokenStream';
import { Vocabulary } from 'antlr4ts/Vocabulary';
import { VocabularyImpl } from 'antlr4ts/VocabularyImpl';

import * as Utils from 'antlr4ts/misc/Utils';

import { ponyListener } from './ponyListener';

export class ponyParser extends Parser {
	public static readonly T__0=1;
	public static readonly T__1=2;
	public static readonly T__2=3;
	public static readonly T__3=4;
	public static readonly T__4=5;
	public static readonly T__5=6;
	public static readonly T__6=7;
	public static readonly T__7=8;
	public static readonly T__8=9;
	public static readonly T__9=10;
	public static readonly T__10=11;
	public static readonly T__11=12;
	public static readonly T__12=13;
	public static readonly T__13=14;
	public static readonly T__14=15;
	public static readonly T__15=16;
	public static readonly T__16=17;
	public static readonly T__17=18;
	public static readonly T__18=19;
	public static readonly T__19=20;
	public static readonly T__20=21;
	public static readonly T__21=22;
	public static readonly T__22=23;
	public static readonly T__23=24;
	public static readonly T__24=25;
	public static readonly T__25=26;
	public static readonly T__26=27;
	public static readonly T__27=28;
	public static readonly T__28=29;
	public static readonly T__29=30;
	public static readonly T__30=31;
	public static readonly T__31=32;
	public static readonly T__32=33;
	public static readonly T__33=34;
	public static readonly T__34=35;
	public static readonly T__35=36;
	public static readonly T__36=37;
	public static readonly T__37=38;
	public static readonly T__38=39;
	public static readonly T__39=40;
	public static readonly T__40=41;
	public static readonly T__41=42;
	public static readonly T__42=43;
	public static readonly T__43=44;
	public static readonly T__44=45;
	public static readonly T__45=46;
	public static readonly T__46=47;
	public static readonly T__47=48;
	public static readonly T__48=49;
	public static readonly T__49=50;
	public static readonly T__50=51;
	public static readonly T__51=52;
	public static readonly T__52=53;
	public static readonly T__53=54;
	public static readonly T__54=55;
	public static readonly T__55=56;
	public static readonly T__56=57;
	public static readonly T__57=58;
	public static readonly T__58=59;
	public static readonly T__59=60;
	public static readonly T__60=61;
	public static readonly T__61=62;
	public static readonly T__62=63;
	public static readonly T__63=64;
	public static readonly T__64=65;
	public static readonly T__65=66;
	public static readonly T__66=67;
	public static readonly T__67=68;
	public static readonly T__68=69;
	public static readonly T__69=70;
	public static readonly T__70=71;
	public static readonly T__71=72;
	public static readonly T__72=73;
	public static readonly T__73=74;
	public static readonly T__74=75;
	public static readonly T__75=76;
	public static readonly T__76=77;
	public static readonly T__77=78;
	public static readonly T__78=79;
	public static readonly T__79=80;
	public static readonly T__80=81;
	public static readonly T__81=82;
	public static readonly T__82=83;
	public static readonly T__83=84;
	public static readonly T__84=85;
	public static readonly T__85=86;
	public static readonly T__86=87;
	public static readonly T__87=88;
	public static readonly T__88=89;
	public static readonly T__89=90;
	public static readonly T__90=91;
	public static readonly T__91=92;
	public static readonly T__92=93;
	public static readonly T__93=94;
	public static readonly T__94=95;
	public static readonly T__95=96;
	public static readonly T__96=97;
	public static readonly T__97=98;
	public static readonly T__98=99;
	public static readonly T__99=100;
	public static readonly T__100=101;
	public static readonly T__101=102;
	public static readonly T__102=103;
	public static readonly T__103=104;
	public static readonly T__104=105;
	public static readonly T__105=106;
	public static readonly T__106=107;
	public static readonly T__107=108;
	public static readonly T__108=109;
	public static readonly T__109=110;
	public static readonly T__110=111;
	public static readonly T__111=112;
	public static readonly T__112=113;
	public static readonly T__113=114;
	public static readonly T__114=115;
	public static readonly T__115=116;
	public static readonly ID=117;
	public static readonly INT=118;
	public static readonly FLOAT=119;
	public static readonly STRING=120;
	public static readonly LPAREN_NEW=121;
	public static readonly LSQUARE_NEW=122;
	public static readonly MINUS_NEW=123;
	public static readonly MINUS_TILDE_NEW=124;
	public static readonly LINECOMMENT=125;
	public static readonly NESTEDCOMMENT=126;
	public static readonly WS=127;
	public static readonly NEWLINE=128;
	public static readonly RULE_module = 0;
	public static readonly RULE_use = 1;
	public static readonly RULE_use_ffi = 2;
	public static readonly RULE_class_def = 3;
	public static readonly RULE_members = 4;
	public static readonly RULE_field = 5;
	public static readonly RULE_method = 6;
	public static readonly RULE_annotatedrawseq = 7;
	public static readonly RULE_rawseq = 8;
	public static readonly RULE_exprseq = 9;
	public static readonly RULE_nextexprseq = 10;
	public static readonly RULE_nosemi = 11;
	public static readonly RULE_semiexpr = 12;
	public static readonly RULE_jump = 13;
	public static readonly RULE_nextassignment = 14;
	public static readonly RULE_assignment = 15;
	public static readonly RULE_nextinfix = 16;
	public static readonly RULE_infix = 17;
	public static readonly RULE_isop = 18;
	public static readonly RULE_binop = 19;
	public static readonly RULE_nextterm = 20;
	public static readonly RULE_term = 21;
	public static readonly RULE_withelem = 22;
	public static readonly RULE_caseexpr = 23;
	public static readonly RULE_elseiftype = 24;
	public static readonly RULE_iftype = 25;
	public static readonly RULE_elseifdef = 26;
	public static readonly RULE_elseif = 27;
	public static readonly RULE_idseq = 28;
	public static readonly RULE_idseq_in_seq = 29;
	public static readonly RULE_nextpattern = 30;
	public static readonly RULE_pattern = 31;
	public static readonly RULE_nextparampattern = 32;
	public static readonly RULE_parampattern = 33;
	public static readonly RULE_nextpostfix = 34;
	public static readonly RULE_postfix = 35;
	public static readonly RULE_call = 36;
	public static readonly RULE_chain = 37;
	public static readonly RULE_tilde = 38;
	public static readonly RULE_dot = 39;
	public static readonly RULE_nextatom = 40;
	public static readonly RULE_atom = 41;
	public static readonly RULE_tuple = 42;
	public static readonly RULE_lambdacaptures = 43;
	public static readonly RULE_lambdacapture = 44;
	public static readonly RULE_lambdaparams = 45;
	public static readonly RULE_lambdaparam = 46;
	public static readonly RULE_positional = 47;
	public static readonly RULE_named = 48;
	public static readonly RULE_namedarg = 49;
	public static readonly RULE_type = 50;
	public static readonly RULE_atomtype = 51;
	public static readonly RULE_barelambdatype = 52;
	public static readonly RULE_lambdatype = 53;
	public static readonly RULE_tupletype = 54;
	public static readonly RULE_infixtype = 55;
	public static readonly RULE_isecttype = 56;
	public static readonly RULE_uniontype = 57;
	public static readonly RULE_nominal = 58;
	public static readonly RULE_gencap = 59;
	public static readonly RULE_cap = 60;
	public static readonly RULE_typeargs = 61;
	public static readonly RULE_typeparams = 62;
	public static readonly RULE_params = 63;
	public static readonly RULE_typeparam = 64;
	public static readonly RULE_typearg = 65;
	public static readonly RULE_literal = 66;
	public static readonly RULE_param = 67;
	public static readonly RULE_antlr_0 = 68;
	public static readonly RULE_antlr_1 = 69;
	public static readonly RULE_antlr_2 = 70;
	public static readonly RULE_antlr_3 = 71;
	public static readonly RULE_antlr_4 = 72;
	public static readonly RULE_identifier = 73;
	public static readonly ruleNames: string[] = [
		"module", "use", "use_ffi", "class_def", "members", "field", "method", 
		"annotatedrawseq", "rawseq", "exprseq", "nextexprseq", "nosemi", "semiexpr", 
		"jump", "nextassignment", "assignment", "nextinfix", "infix", "isop", 
		"binop", "nextterm", "term", "withelem", "caseexpr", "elseiftype", "iftype", 
		"elseifdef", "elseif", "idseq", "idseq_in_seq", "nextpattern", "pattern", 
		"nextparampattern", "parampattern", "nextpostfix", "postfix", "call", 
		"chain", "tilde", "dot", "nextatom", "atom", "tuple", "lambdacaptures", 
		"lambdacapture", "lambdaparams", "lambdaparam", "positional", "named", 
		"namedarg", "type", "atomtype", "barelambdatype", "lambdatype", "tupletype", 
		"infixtype", "isecttype", "uniontype", "nominal", "gencap", "cap", "typeargs", 
		"typeparams", "params", "typeparam", "typearg", "literal", "param", "antlr_0", 
		"antlr_1", "antlr_2", "antlr_3", "antlr_4", "identifier"
	];

	private static readonly _LITERAL_NAMES: (string | undefined)[] = [
		undefined, "'use'", "'='", "'if'", "'@'", "'('", "')'", "'?'", "'type'", 
		"'interface'", "'trait'", "'primitive'", "'struct'", "'class'", "'actor'", 
		"'\\'", "','", "'is'", "'var'", "'let'", "'embed'", "':'", "'fun'", "'be'", 
		"'new'", "'=>'", "';'", "'return'", "'break'", "'continue'", "'error'", 
		"'compile_intrinsic'", "'compile_error'", "'isnt'", "'and'", "'or'", "'xor'", 
		"'+'", "'-'", "'*'", "'/'", "'%'", "'+~'", "'-~'", "'*~'", "'/~'", "'%~'", 
		"'<<'", "'>>'", "'<<~'", "'>>~'", "'=='", "'!='", "'<'", "'<='", "'>='", 
		"'>'", "'==~'", "'!=~'", "'<~'", "'<=~'", "'>=~'", "'>~'", "'then'", "'else'", 
		"'end'", "'ifdef'", "'iftype'", "'match'", "'while'", "'do'", "'repeat'", 
		"'until'", "'for'", "'in'", "'with'", "'try'", "'recover'", "'consume'", 
		"'#'", "'|'", "'elseif'", "'<:'", "'not'", "'addressof'", "'digestof'", 
		"'.>'", "'~'", "'.'", "'this'", "'as'", "']'", "'object'", "'{'", "'}'", 
		"'@{'", "'__loc'", "'['", "'where'", "'->'", "'^'", "'!'", "'&'", "'#read'", 
		"'#send'", "'#share'", "'#alias'", "'#any'", "'iso'", "'trn'", "'ref'", 
		"'val'", "'box'", "'tag'", "'...'", "'true'", "'false'"
	];
	private static readonly _SYMBOLIC_NAMES: (string | undefined)[] = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, "ID", "INT", "FLOAT", 
		"STRING", "LPAREN_NEW", "LSQUARE_NEW", "MINUS_NEW", "MINUS_TILDE_NEW", 
		"LINECOMMENT", "NESTEDCOMMENT", "WS", "NEWLINE"
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(ponyParser._LITERAL_NAMES, ponyParser._SYMBOLIC_NAMES, []);

	@Override
	@NotNull
	public get vocabulary(): Vocabulary {
		return ponyParser.VOCABULARY;
	}

	@Override
	public get grammarFileName(): string { return "pony.g4"; }

	@Override
	public get ruleNames(): string[] { return ponyParser.ruleNames; }

	@Override
	public get serializedATN(): string { return ponyParser._serializedATN; }

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(ponyParser._ATN, this);
	}
	@RuleVersion(0)
	public module(): ModuleContext {
		let _localctx: ModuleContext = new ModuleContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, ponyParser.RULE_module);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 149;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===ponyParser.STRING) {
				{
				this.state = 148;
				this.match(ponyParser.STRING);
				}
			}

			this.state = 154;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===ponyParser.T__0) {
				{
				{
				this.state = 151;
				this.use();
				}
				}
				this.state = 156;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 160;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << ponyParser.T__7) | (1 << ponyParser.T__8) | (1 << ponyParser.T__9) | (1 << ponyParser.T__10) | (1 << ponyParser.T__11) | (1 << ponyParser.T__12) | (1 << ponyParser.T__13))) !== 0)) {
				{
				{
				this.state = 157;
				this.class_def();
				}
				}
				this.state = 162;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public use(): UseContext {
		let _localctx: UseContext = new UseContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, ponyParser.RULE_use);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 163;
			this.match(ponyParser.T__0);
			this.state = 167;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===ponyParser.ID) {
				{
				this.state = 164;
				this.identifier();
				this.state = 165;
				this.match(ponyParser.T__1);
				}
			}

			this.state = 171;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case ponyParser.STRING:
				{
				this.state = 169;
				this.match(ponyParser.STRING);
				}
				break;
			case ponyParser.T__3:
				{
				this.state = 170;
				this.use_ffi();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this.state = 175;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===ponyParser.T__2) {
				{
				this.state = 173;
				this.match(ponyParser.T__2);
				this.state = 174;
				this.infix();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public use_ffi(): Use_ffiContext {
		let _localctx: Use_ffiContext = new Use_ffiContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, ponyParser.RULE_use_ffi);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 177;
			this.match(ponyParser.T__3);
			this.state = 180;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case ponyParser.ID:
				{
				this.state = 178;
				this.identifier();
				}
				break;
			case ponyParser.STRING:
				{
				this.state = 179;
				this.match(ponyParser.STRING);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this.state = 182;
			this.typeargs();
			this.state = 183;
			_la = this._input.LA(1);
			if ( !(_la===ponyParser.T__4 || _la===ponyParser.LPAREN_NEW) ) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			this.state = 185;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===ponyParser.T__113 || _la===ponyParser.ID) {
				{
				this.state = 184;
				this.params();
				}
			}

			this.state = 187;
			this.match(ponyParser.T__5);
			this.state = 189;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===ponyParser.T__6) {
				{
				this.state = 188;
				this.match(ponyParser.T__6);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public class_def(): Class_defContext {
		let _localctx: Class_defContext = new Class_defContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, ponyParser.RULE_class_def);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 191;
			_la = this._input.LA(1);
			if ( !((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << ponyParser.T__7) | (1 << ponyParser.T__8) | (1 << ponyParser.T__9) | (1 << ponyParser.T__10) | (1 << ponyParser.T__11) | (1 << ponyParser.T__12) | (1 << ponyParser.T__13))) !== 0)) ) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}
